Format Navbar on Index

--- a/index.html
+++ b/index.html
@@ -6,31 +6,19 @@
     <title>JLabadie</title>
     <!--Favicon found on Icons8-->
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <header>
-      <!--Header and navigation links-->
-      <h1>John Labadie - Portfolio</h1>
-      <nav id="pageHeader">
-        <a href="./index.html" class="navOption">Portfolio</a>
-        <a href="./html/my_resume.html" class="navOption">Resume</a>
-        <a href="./html/my_fun_facts.html" class="navOption">Fun Facts</a>
-      </nav>
-      <br />
-      <!--Avatar image-->
-      <img
-        src="./img/jlabadie-avatar.png"
-        alt="JLabadie Avatar"
-        height="200"
-        width="200"
-      />
-      <br />
-      <!--Brief quote that relates to technology-->
-      <strong
-        >&nbsp;&nbsp;&nbsp;&nbsp;Technology itself is neither good or bad -
-        Denis Matte</strong
-      >
-      <hr />
+      <div class="topbar">
+        <img class="logoImage" src="./img/OU_RGB_BLK.png" alt="OU Logo">
+        <nav class="navbar">
+          <a href="./index.html" class="navbar-link">Portfolio</a>
+          <a href="./html/my_resume.html" class="navbar-link">Resume</a>
+          <a href="./html/my_fun_facts.html" class="navbar-link">Fun Facts</a>
+        </nav>
+      </div>
     </header>
     <main>
       <!--Elevator Pitch-->
