Centered Landing Page Text

--- a/index.html
+++ b/index.html
@@ -21,31 +21,37 @@
       </div>
     </header>
     <main>
-      <!--Elevator Pitch-->
-      <p>
-        My name is John Labadie and I'm in my third year of getting my degree in
-        Information Technology. My plan is to become a systems administrator for
-        automotive company such as General Motors but I'm not quite sure if that
-        kind of company is the one I'd like to support. I've taken a number of
-        IT courses already and programmed supplemental applications for myself
-        and my colleagues at work. Thanks to my job at OU, I am a certified Dell
-        System Engineer and am working towards becoming a certified Dell Repair
-        Technician. If your company has a dedicated person who hires for IT
-        internships/positions or if there is another time I could speak with you
-        about IT internships, I'd love to hear more about what your company
-        offers. To learn more about my professional experiences and interesting
-        facts, checkout my <a href="./html/my_resume.html">resume</a> and
-        <a href="./html/my_fun_facts.html">fun facts</a> pages.
-      </p>
-      <!--Progress bar for completed credits-->
-      <h2>Progress to Degree Completion</h2>
-      <div class="progressBar">
-        <label for="progressToDegree">77% of Credits Applied</label>
-        <progress id="progressToDegree" value="99" max="128">77%</progress>
+      <div class="center">
+        <h1>Portfolio - John Labadie</h1>
+        <!--Elevator Pitch-->
+        <p>
+          My name is John Labadie and I'm in my third year of getting my degree in
+          Information Technology. My plan is to become a systems administrator for
+          automotive company such as General Motors but I'm not quite sure if that
+          kind of company is the one I'd like to support. I've taken a number of
+          IT courses already and programmed supplemental applications for myself
+          and my colleagues at work. Thanks to my job at OU, I am a certified Dell
+          System Engineer and am working towards becoming a certified Dell Repair
+          Technician. If your company has a dedicated person who hires for IT
+          internships/positions or if there is another time I could speak with you
+          about IT internships, I'd love to hear more about what your company
+          offers. To learn more about my professional experiences and interesting
+          facts, checkout my <a href="./html/my_resume.html">resume</a> and
+          <a href="./html/my_fun_facts.html">fun facts</a> pages.
+        </p>
+        <button type="button" onclick="location.href = './html/my_resume.html';">Resume</button>
+        <button type="button" onclick="location.href = './html/my_fun_facts.html';">Fun Facts</button>
+        <!--Progress bar for completed credits-->
+        <h2>Progress to Degree Completion</h2>
+        <div class="progressBar">
+          <label for="progressToDegree">77% of Credits Applied</label>
+          <progress id="progressToDegree" value="99" max="128">77%</progress>
+        </div>
       </div>
       <hr />
     </main>
     <footer>
+      <img class="center" src="./img/pretty-nature.jpeg" alt="Pretty Nature Picture" width="50%"  height="50%">
       <!--Copyright information and Social Media Accounts-->
       <div id="copyrightInfo">
         <h3>&#169; John Labadie</h3>
