Centered Index Image

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <hr />
     </main>
     <footer>
-      <img class="center" src="./img/pretty-nature.jpeg" alt="Pretty Nature Picture" width="50%"  height="50%">
+      <img class="center-img" src="./img/pretty-nature.jpeg" alt="Pretty Nature Picture" width="50%"  height="50%">
       <!--Copyright information and Social Media Accounts-->
       <div id="copyrightInfo">
         <h3>&#169; John Labadie</h3>
