Added Header to Resume and Fun Facts

--- a/html/my_fun_facts.html
+++ b/html/my_fun_facts.html
@@ -6,18 +6,22 @@
     <title>JLabadie</title>
     <!--Favicon found on Icons8-->
     <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
     <header>
-        <!--Header and navigation links-->
-      <h1>Some fun facts about me</h1>
-      <nav id="pageHeader">
-        <a href="../index.html" class="navOption">Portfolio</a>
-        <a href="../html/my_resume.html" class="navOption">Resume</a>
-        <a href="../html/my_fun_facts.html" class="navOption">Fun Facts</a>
-      </nav>
+      <div class="topbar">
+        <img class="logoImage" src="../img/OU_RGB_BLK.png" alt="OU Logo">
+        <nav class="navbar">
+          <a href="../index.html" class="navbar-link">Portfolio</a>
+          <a href="../html/my_resume.html" class="navbar-link">Resume</a>
+          <a href="../html/my_fun_facts.html" class="navbar-link">Fun Facts</a>
+        </nav>
+      </div>
     </header>
     <main>
+      <h1>Some fun facts about me</h1>
         <!--Favorite Book, Song, and Movie-->
       <div class="favBook">
         <h2>Favorite Book:</h2>
