--- a/html/my_resume.html
+++ b/html/my_resume.html
@@ -6,27 +6,22 @@
     <title>JLabadie</title>
     <!--Favicon found on Icons8-->
     <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
     <header>
-      <!--Header and navigation links-->
-      <h1>John Labadie - Resume</h1>
-      <nav id="pageHeader">
-        <a href="../index.html" class="navOption">Portfolio</a>
-        <a href="../html/my_resume.html" class="navOption">Resume</a>
-        <a href="../html/my_fun_facts.html" class="navOption">Fun Facts</a>
-      </nav>
-      <!--Contact Info-->
-      <h2>Contact Information:</h2>
-      <p>Phone: <a href="tel:+12483702100">(248) 370-2100</a></p>
-      <p>Address:</p>
-      <address>318 Meadow Brook Rd, Rochester, MI 48309</address>
-      <p>
-        Email: <a href="mailto:jlabadie@oakland.edu">jlabadie@oakland.edu</a>
-      </p>
-      <hr />
+      <div class="topbar">
+        <img class="logoImage" src="../img/OU_RGB_BLK.png" alt="OU Logo">
+        <nav class="navbar">
+          <a href="../index.html" class="navbar-link">Portfolio</a>
+          <a href="../html/my_resume.html" class="navbar-link">Resume</a>
+          <a href="../html/my_fun_facts.html" class="navbar-link">Fun Facts</a>
+        </nav>
+      </div>
     </header>
     <main>
+      <h1>John Labadie - Resume</h1>
       <!--Objective, Professional Experience, Educational Experience, and Extracurriculars/Hobbies-->
       <div id="objective">
         <h2>Objective</h2>
